# EonOS-Openharmony

./: README.md  build.py  qemu-run
OpenHarmony/applications/standard/admin_provisioning/: BUILD.gn  OAT.xml  README.md  README_zh.md  build-profile.json5  hvigorfile.js  local.properties  package.json
OpenHarmony/applications/standard/applications_auth_widget/: .gitignore  BUILD.gn  OAT.xml  README.md  README_ZH.md  build-profile.json5  bundle.json  hvigorfile.ts  hvigorw  oh-package.json5  package.json
OpenHarmony/applications/standard/call/: BUILD.gn  OAT.xml  README-en.md  README.md  build-profile.json5  hvigorfile.js  hvigorw.bat  oh-package.json5  package.json
OpenHarmony/applications/standard/contacts_data/: BUILD.gn  OAT.xml  README.md  README_zh.md  bundle.json  contact.gni
OpenHarmony/arkcompiler/ets_runtime/: .gitignore  BUILD.gn  CODEOWNERS  OAT.xml  README.md  README_zh.md  REVIEWERS  bundle.json  hisysevent.yaml  js_runtime_config.gni  libark_jsruntime.map
OpenHarmony/arkcompiler/ets_runtime/.gitee/: PULL_REQUEST_TEMPLATE.zh-CN.md
OpenHarmony/arkcompiler/ets_runtime/compiler_service/: BUILD.gn  ark_aot_compiler.cfg  compiler_service.cfg  libaot_compiler_service.map
OpenHarmony/arkcompiler/ets_runtime/docs/: README_zh.md  aot-guide_zh.md  development-example.md  using-the-toolchain.md
OpenHarmony/arkcompiler/ets_runtime/ecmascript/: accessor_data.h  async_generator_helper.cpp  base_env.h  builtin_entries.h  byte_array.cpp  byte_array.h  common.h  common_enum.h  date_parse.cpp  date_parse.h  dependent_infos.cpp  dependent_infos.h  dump.cpp  dynamic_object_accessor.cpp  dynamic_object_accessor.h  dynamic_object_descriptor.cpp  dynamic_object_descriptor.h  dynamic_type_converter.cpp  dynamic_type_converter.h  ecma_global_storage.h  ecma_handle_scope.cpp  ecma_handle_scope.h  ecma_isa.yaml  ecma_macros.h  ecma_param_configuration.h  ecma_runtime_call_info.h  ecma_string-inl.h  ecma_string.cpp  ecma_string.h  ecma_string_table.cpp  ecma_string_table.h  ecma_string_table_optimization-inl.h  ecma_string_table_optimization.cpp  ecma_vm.cpp  ecma_vm.h  element_accessor-inl.h  element_accessor.cpp  element_accessor.h  elements.cpp  elements.h  (+173 more)
OpenHarmony/arkcompiler/ets_runtime/etc/: BUILD.gn  arkcompiler.para.dac
OpenHarmony/arkcompiler/ets_runtime/script/: gen_expect_output.sh  metadata_copy_for_test.py  metadata_generate.py  run_ark_executable.py
OpenHarmony/arkcompiler/ets_runtime/test/: run_ts_test262.py  runtest.py  test_helper.gni
OpenHarmony/arkcompiler/jsvm/: .clang-format  BUILD.gn  CMakeLists.txt  CODEOWNEWRS  README.en.md  README.md  app_jit_enable_list.conf  build_jsvm.sh  build_jsvm_inter.sh  bundle.json  copy_llhttp.sh  copy_v8.sh  jsvm.gni
OpenHarmony/arkcompiler/jsvm/patches/: patches.json
OpenHarmony/arkcompiler/jsvm/src/: js_native_api_v8.cpp  js_native_api_v8.h  jsvm_dfx.h  jsvm_env.cpp  jsvm_env.h  jsvm_inspector_agent.h  jsvm_log.h  jsvm_reference-inl.h  jsvm_reference.cpp  jsvm_reference.h  jsvm_util.h  jsvm_version.h  memory_manager.h  sourcemap.h  type_conversion.h
OpenHarmony/arkcompiler/runtime_core/: .gitattributes  .gitignore  BUILD.gn  CODEOWNERS  OAT.xml  README.md  README_zh.md  ark_config.gni  ark_root.gni  bundle.json  codecheck_ignore.json  static_vm_config.gni
OpenHarmony/arkcompiler/runtime_core/.gitee/: PULL_REQUEST_TEMPLATE.en.md  PULL_REQUEST_TEMPLATE.zh-CN.md
OpenHarmony/arkcompiler/runtime_core/abc2program/: BUILD.gn  abc2prog_main.cpp  abc2program_compiler.cpp  abc2program_compiler.h  abc2program_driver.cpp  abc2program_driver.h  abc2program_log.cpp  abc2program_log.h  abc2program_options.cpp  abc2program_options.h  abc_annotation_processor.cpp  abc_annotation_processor.h  abc_class_processor.cpp  abc_class_processor.h  abc_code_processor.cpp  abc_code_processor.h  abc_field_processor.cpp  abc_field_processor.h  abc_file_entity_processor.cpp  abc_file_entity_processor.h  abc_literal_array_processor.cpp  abc_literal_array_processor.h  abc_method_processor.cpp  abc_method_processor.h  abc_module_array_processor.cpp  abc_module_array_processor.h  dump_utils.cpp  dump_utils.h  program_dump.cpp  program_dump.h
OpenHarmony/arkcompiler/runtime_core/arkplatform/: BUILD.gn  arkplatform_config.gni
OpenHarmony/arkcompiler/toolchain/: BUILD.gn  OAT.xml  REVIEWERS  bundle.json  toolchain.gni  toolchain_config.gni
OpenHarmony/base/location/: .gitignore  CODEOWNERS  OAT.xml  README.en.md  README.md  bundle.json  cfi_blocklist.txt  config.gni
OpenHarmony/commonlibrary/ets_utils/: README.en.md  README.md  bundle.json  ets_utils_config.gni  hisysevent.yaml
OpenHarmony/commonlibrary/utils_lite/: BUILD.gn  README.md  README_zh.md  bundle.json
OpenHarmony/developtools/ace_ets2bundle/: .gitignore  BUILD.gn  OAT.xml  README.md  README_zh.md  build_ets_loader_library.py  bundle.json  generateSysResource.py  install_arkguard_tsc.py
OpenHarmony/developtools/ace_js2bundle/: BUILD.gn  OAT.xml  README.md  README_zh.md  build_ace_loader_library.py  bundle.json
OpenHarmony/developtools/global_resource_tool/: BUILD.gn  CMakeLists.txt  OAT.xml  README.md  README_zh.md  bundle.json  restool.gni  win32.cmake
OpenHarmony/developtools/hapsigner/: .gitignore  BUILD.gn  NOTICE  OAT.xml  README.md  README_ZH.md
OpenHarmony/developtools/hdc/: BUILD.gn  README.md  README_zh.md  bundle.json  hdc.gni
OpenHarmony/developtools/hiperf/: .gitignore  BUILD.gn  OAT.xml  README.md  README_zh.md  bundle.json  clang_format_all.bat  clang_format_all.sh  hiperf.gni
OpenHarmony/developtools/syscap_codec/: BUILD.gn  OAT.xml  README.md  README_ZH.md  RELEASE-NOTE.txt  bundle.json  config.gni  libsyscap_interface_shared.versionscript
OpenHarmony/drivers/interface/: OAT.xml  README.md  README_ZH.md  interface.gni
OpenHarmony/interface/sdk-js/: .gitignore  BUILD.gn  LICENCE.md  OAT.xml  README.md  README_zh.md  interface_config.gni  process_internal.py  remove_internal.py  remove_list.json
OpenHarmony/kernel/uniproton/: BUILD.gn  NOTICE  OAT.xml  README.OpenSource  README.md  build.py  bundle.json  config.xml  uniproton.gni
(+14130 files in other folders)
