# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

jsvm_path = "//arkcompiler/jsvm"

jsvm_sources = [
  "src/js_native_api_v8.cpp",
  "src/jsvm_env.cpp",
  "src/jsvm_reference.cpp",
]

jsvm_inspector_sources = [
  "src/inspector/inspector_socket.cpp",
  "src/inspector/inspector_socket_server.cpp",
  "src/inspector/inspector_utils.cpp",
  "src/inspector/js_native_api_v8_inspector.cpp",
]

declare_args() {
  jsvm_shared_libuv = true
  enable_debug = false
  enable_inspector = true
  use_platform_ohos = true
  support_hwasan = false
}
