# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (!defined(ark_static_standalone_build)) {
  ark_static_standalone_build = false
}
if (!defined(ark_standalone_build)) {
  ark_standalone_build = false
}

import("//arkcompiler/runtime_core/libabckit/abckit_config.gni")

if (ark_standalone_build) {
  import("//arkcompiler/toolchain/build/config/sanitizers/sanitizers.gni")
  ark_root = "//arkcompiler/runtime_core/static_core"
  import("$build_root/ark_var.gni")
} else if (ark_static_standalone_build) {
  import("//build/config/sanitizers/sanitizers.gni")
  build_root = "$ark_root/gn/build"
} else {
  import("//build/config/sanitizers/sanitizers.gni")
  build_root = "//build"
  import("//build/ohos_var.gni")
}

enable_arkplatform = true
enable_static_vm = true
if (is_asan && use_hwasan) {
  enable_arkplatform = false
  enable_static_vm = false
}
