# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("toolchain_config.gni")

toolchain_root = "//arkcompiler/toolchain"
toolchain_output_path = "toolchain/toolchain"

toolchain_platform_source = []

if (is_mingw) {
  toolchain_platform_source += [ "$toolchain_root/platform/windows/file.cpp" ]
} else {
  toolchain_platform_source += [ "$toolchain_root/platform/unix/file.cpp" ]
}
