# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (defined(is_arkui_x) && is_arkui_x) {
  plugins_root = "//plugins"
}
declare_args() {
  ets_utils_stacksize_low_enable = false
}
container_root = "//commonlibrary/ets_utils/js_util_module/container/"
concurrent_module = "//commonlibrary/ets_utils/js_concurrent_module/"
process_root = "//commonlibrary/ets_utils/js_sys_module/process"
sys_module = "//commonlibrary/ets_utils/js_sys_module/"
util_module = "//commonlibrary/ets_utils/js_util_module/"
platform_root = "//commonlibrary/ets_utils/platform/"
napi_root = "//foundation/arkui/napi"
ace_root = "//foundation/arkui/ace_engine"
openssl_root = "//third_party/openssl"
icu_root = "//third_party/icu/icu4c"
node_root = "//third_party/node"
third_party_root = "//third_party"
hilog_windows =
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog_windows"
hilog_linux =
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog_linux"
hilog_mac = "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog_mac"
hilog_ios = "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog_ios"
hilog_android =
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog_android"
ace_napi_dep = "//foundation/arkui/napi:ace_napi"
generate_js_bytecode_py =
    "//arkcompiler/ets_frontend/es2panda/scripts/generate_js_bytecode.py"
ets_util_path = "//commonlibrary/ets_utils"
js_concurrent_module_common =
    "//commonlibrary/ets_utils/js_concurrent_module/common"
ets_runtime = "//arkcompiler/ets_runtime"
